fix: add sheet dark mode input text color

--- a/styles.css
+++ b/styles.css
@@ -754,6 +754,7 @@ body {
 	padding: 0 8px;
 	background: #fff;
 	border: 1px solid #e9e9e9;
+	color: rgba(0, 0, 0, 0.87);
 	border-radius: 3px;
 	transition: box-shadow 0.1s ease, border-color 0.1s ease;
 	box-shadow: inset 0 1px 2px hsla(0, 0%, 4%, 0.06);
